--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="/static/styles.css"/>
 
   <!-- Schedule-X -->
-  <link rel="stylesheet" href="/static/schedule-x.css"/>
+  <link rel="stylesheet" href="/static/fullcalendar.css"/>
 </head>
 <body class="min-h-screen font-sans bg-white text-gray-900 dark:bg-slate-950 dark:text-slate-100" data-demo="{{ '1' if demo_mode else '' }}" data-cal-debug="{{ '1' if config.APP_MODE == 'dev' else '' }}">
   {% set path = request.path %}
